# discord-ext-webhook-events

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
discord/ext/webhook_events/: __init__.py  client.py
discord/ext/webhook_events/types/: events.py
